syntax = "proto3";

package aerodrome;

// Swap event collection
message SwapEvents {
  repeated AerodromeSwap swaps = 1;
  uint32 swap_count = 2;
  uint64 total_volume = 3;
}

// Individual Aerodrome Swap event
message AerodromeSwap {
  uint64 block_number = 1;
  string transaction_hash = 2;
  uint64 log_index = 3;
  string pool_address = 4;
  string sender = 5;
  string recipient = 6;
  string amount0_in = 7;
  string amount1_in = 8;
  string amount0_out = 9;
  string amount1_out = 10;
  uint64 timestamp = 11;
}

// Liquidity event collection (Mint/Burn)
message LiquidityEvents {
  repeated AerodromeLiquidity events = 1;
  uint32 event_count = 2;
}

// Individual Aerodrome Liquidity event (Mint or Burn)
message AerodromeLiquidity {
  uint64 block_number = 1;
  string transaction_hash = 2;
  uint64 log_index = 3;
  string pool_address = 4;
  string sender = 5;
  string recipient = 6;
  string amount0 = 7;
  string amount1 = 8;
  string action = 9; // "mint" or "burn"
  uint64 timestamp = 10;
}

// Sync event collection (reserve updates)
message SyncEvents {
  repeated SyncEvent events = 1;
  uint32 event_count = 2;
}

// Individual Sync event
message SyncEvent {
  uint64 block_number = 1;
  string pool_address = 2;
  string reserve0 = 3;
  string reserve1 = 4;
  uint64 timestamp = 5;
}

// Aerodrome Governance event
message AerodromeGovernance {
  uint64 block_number = 1;
  string transaction_hash = 2;
  uint64 log_index = 3;
  string voter = 4;
  string delegate = 5;
  string amount = 6;
  uint64 timestamp = 7;
  string action = 8; // "vote" or "delegate"
}

// Aerodrome Reward event
message AerodromeReward {
  uint64 block_number = 1;
  string transaction_hash = 2;
  uint64 log_index = 3;
  string user = 4;
  string token = 5;
  string amount = 6;
  uint64 timestamp = 7;
}
